--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.0+1
+  firebase_database: ^6.0.0
+  connectivity: ^2.0.2
+  outline_material_icons: ^0.1.1
+  geolocator: ^6.1.13
+  http: ^0.12.2
+  provider: ^4.3.3
+  flutter_polyline_points: ^0.2.4
+  google_maps_flutter: ^2.0.1
+  font_awesome_flutter: ^8.11.0
+  animated_text_kit: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
